# Othello

./: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  PlayablePosition.cpp  PlayablePosition.h  Player.cpp  Player.h  Position.cpp  Position.h  README.md  UnplayablePosition.cpp  UnplayablePosition.h  boardOptions.txt  game1.rtf  main.cpp
